force-apps/deploy/main/default/objects/dcOrderItems__c/dcOrderItems__c.object-meta.xml
<CustomObject>
    <label>dcOrderItems</label>
    <nameField>
        <displayFormat>ORDER_ITEM-{0000}</displayFormat>
        <label>dcOrderItems</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dcOrderItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>