force-apps/deploy/main/default/objects/dcOrderItems__c/fields/ListPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceAmount__c</fullName>
    <label>ListPriceAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>