force-apps/deploy/main/default/objects/dcOrderItems__c/fields/OrderedQuantity__c.field-meta.xml
<CustomField>
    <fullName>OrderedQuantity__c</fullName>
    <label>OrderedQuantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>